# qtWrite

./: .gitignore  CMakeLists.txt  Main.qml  README.md  fileOperations.cpp  fileOperations.h  main.cpp
.github/workflows/: ubuntu.yml
data/: drew1.tff  glyph_ampersand.json  glyph_asterik.json  glyph_at_sign.json  glyph_back_slash.json  glyph_backtic.json  glyph_capital_letter_A.json  glyph_capital_letter_B.json  glyph_capital_letter_C.json  glyph_capital_letter_D.json  glyph_capital_letter_E.json  glyph_capital_letter_F.json  glyph_capital_letter_G.json  glyph_capital_letter_H.json  glyph_capital_letter_I.json  glyph_capital_letter_J.json  glyph_capital_letter_K.json  glyph_capital_letter_L.json  glyph_capital_letter_M.json  glyph_capital_letter_N.json  glyph_capital_letter_O.json  glyph_capital_letter_P.json  glyph_capital_letter_Q.json  glyph_capital_letter_R.json  glyph_capital_letter_S.json  glyph_capital_letter_T.json  glyph_capital_letter_U.json  glyph_capital_letter_V.json  glyph_capital_letter_W.json  glyph_capital_letter_X.json  glyph_capital_letter_Y.json  glyph_capital_letter_Z.json  glyph_carrot.json  glyph_closed_curly_brace.json  glyph_closed_parenthesis.json  glyph_closed_square_bracket.json  glyph_colon.json  glyph_comma.json  glyph_dollar_sign.json  glyph_double_quotation_mark.json  (+57 more)
scripts/: flipDPath.js  glypabet.js  reversePath.js  script.js  sentenceToUseDefs.js  simplifyScript.js
